Add support for jar: URLs in MemoryLoaderDelegate.addToClasspath().